# Geometric_table

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  ENTRYPOINT.md  Makefile  README.md  REPORT.md  REPORT_baseline.md  REPORT_wsZ1.md  VERSION  analyze_complexity_correlations.py  analyze_d_block_plateau.py  analyze_geom_nuclear_complexity.py  analyze_geom_table.py  analyze_isotope_bands.py  analyze_plateaus_with_dblock.py  collect_project_snapshot.py  compare_nuclear_v02_to_experiment.py  complexity.py  complexity_summary.csv  diag2.txt  diag_after_fit.txt  element_indices_v4.csv  element_indices_with_dblock.csv  export_geom_periodic_table.py  extend_d_block_from_pauling.py  fdm.py  fit_chi_to_pauling.py  fit_nuclear_coeffs.py  flow_diag.txt  geom_atoms.py  geom_band_vs_ws_magic.py  geom_isotope_bands.csv  geom_nuclear_complexity_stats.txt  geom_nuclear_complexity_summary.csv  geom_nuclear_map.csv  geom_nuclear_map_log.txt  (+32 more)
analysis/: analyze_complexity_correlations.py  analyze_crossing_proxy.py  analyze_cycle_stats.py  analyze_d_block_plateau.py  analyze_fdm_vs_nucleus.py  analyze_geom_nuclear_complexity.py  analyze_geom_table.py  analyze_isotope_bands.py  analyze_loopy_fdm_penalty.py  analyze_loopy_modes.py  analyze_plateaus_with_dblock.py  analyze_toy_low_shells.py  calibrate_f_levels_fdm_1d.py  calibrate_fdm_params.py  check_heavy_sp_pauling.py  cli_common.py  compare_f_levels_fdm_variants_1d.py  compare_nuclear_v02_to_experiment.py  explore_loopy_cross_beta.py  explore_toy_chi_spec_1d.py  export_atoms_db.py  extend_d_block_from_pauling.py  fit_tree_capacity.py  geom_band_vs_ws_magic.py  geom_vs_ws_magic.py  growth_cli.py  io_utils.py  map_geom_to_valley.py  (+23 more)
(+1329 files in other folders)
