[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hetero1a"
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
demo = [
  "rdkit-pypi",
]
chem = [
  "rdkit-pypi",
]

[project.scripts]
hetero-audit = "hetero1a.cli:hetero_audit"
hetero-decoys = "hetero1a.cli:hetero_decoys"
hetero-pipeline = "hetero1a.cli:hetero_pipeline"
hetero-report = "hetero1a.cli:hetero_report"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["analysis*", "hetero1a*", "hetero2*"]
