[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hetero1a"
version = "0.2.4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy<2",
  "pandas",
  "matplotlib",
  "scipy",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
demo = [
  "rdkit-pypi",
]
chem = [
  "rdkit-pypi",
  "Pillow",
]

[project.scripts]
hetero-audit = "hetero1a.cli:hetero_audit"
hetero-decoys = "hetero1a.cli:hetero_decoys"
hetero-pipeline = "hetero1a.cli:hetero_pipeline"
hetero-report = "hetero1a.cli:hetero_report"
hetero2-pipeline = "hetero2.cli:main_pipeline"
hetero2-report = "hetero2.cli:main_report"
hetero2-demo-aspirin = "hetero2.cli:main_demo_aspirin"
hetero2-batch = "hetero2.cli:main_batch"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["analysis*", "hetero1a*", "hetero2*"]
